--- a/src/main/resources/store.properties
+++ b/src/main/resources/store.properties
@@ -3,3 +3,4 @@ version=0.1.2
 instanceName=store
 instanceDisplayName=Ambari Store
 description=Ambari Application Store
+mainStoreAppId=ambari-store
