--- a/package/config.yml
+++ b/package/config.yml
@@ -9,7 +9,8 @@ storefront: none
 logo: hortonworks.jpg
 contributor: Jean-Philippe Player <jp@hortonworks.com>
 packager: Jean-Philippe Player <jp@hortonworks.com>
-package: http://ec2-54-184-106-70.us-west-2.compute.amazonaws.com/amstore/ambari-store-0.1.4.jar
+homepage: https://github.com/jpplayer/amstore-view
+package: http://amstore.cloudapp.net/amstore/ambari-store-0.1.4.jar
 readiness: experimental
 tags: 
  - ambari
